hphp/test/zend/good/ext/ldap/tests/ldap_get_values_len_error.php.skipif
<?php require_once('skipif.inc'); ?>
<?php require_once('skipifbindfailure.inc'); ?>